Refactored some of the rich editor styles to use core variables (more refactoring to come) Fixed margin issue with first elements Hide pilcrow menu on mobile

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -718,7 +718,7 @@ label.checkbox input.checkbox-input {
 
 .richEditor-frame.InputBox {
   position: relative;
-  background: white;
+  background: #fff;
   height: auto;
   padding: 0;
 }
@@ -1193,7 +1193,7 @@ label.checkbox input.checkbox-input {
   border-right: 1px solid #999;
   box-shadow: 0 0 5px 1px #eee;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
-  background: white;
+  background: #fff;
 }
 
 .richEditor-toolbarContainer.isUp {
@@ -1316,7 +1316,7 @@ label.checkbox input.checkbox-input {
   background: none;
   padding: 12px;
   font-size: 14px;
-  background-color: #f6f8fa;
+  background-color: #f7f7f7;
 }
 
 .userContent > *:not(:last-child) {
@@ -1330,6 +1330,10 @@ label.checkbox input.checkbox-input {
 .userContent > *:not(:last-child) + h5,
 .userContent > *:not(:last-child) + h6 {
   margin-top: 9.6px;
+}
+
+.userContent > *:first-child {
+  margin-top: 0 !important;
 }
 
 .userContent,
@@ -1349,7 +1353,7 @@ label.checkbox input.checkbox-input {
   word-break: break-all;
   word-break: break-word;
   text-overflow: ellipsis;
-  line-height: 1.5;
+  line-height: 1.4285714286;
 }
 
 .userContent code {
@@ -1562,6 +1566,10 @@ body.isMobile .FormWrapper {
   padding-right: 18px;
 }
 
+body.isMobile .richEditorParagraphMenu {
+  display: none !important;
+}
+
 @media (max-width: 700px) {
   .embedDialogue {
     position: static;
@@ -1583,6 +1591,9 @@ body.isMobile .FormWrapper {
   .FormWrapper {
     padding-left: 18px;
     padding-right: 18px;
+  }
+  .richEditorParagraphMenu {
+    display: none !important;
   }
 }
 
